# LangAlpha

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
deploy/: Dockerfile.backend  Dockerfile.dev
libs/ptc-cli/: pyproject.toml
scripts/utils/: test_robinhood_oauth.py
src/config/: logging_config.py
src/observability/: __init__.py  db_callbacks.py  metrics.py  otel.py  tracing.py
src/ptc_agent/agent/: agent.py
src/ptc_agent/agent/flash/: agent.py
src/ptc_agent/agent/middleware/: __init__.py
src/ptc_agent/agent/middleware/background_subagent/: middleware.py
src/ptc_agent/agent/middleware/compaction/: __init__.py  utils.py
src/ptc_agent/agent/subagents/: compiler.py
src/ptc_agent/config/: agent.py  utils.py
src/ptc_agent/core/: mcp_registry.py
src/ptc_agent/core/sandbox/: ptc_sandbox.py
src/server/app/: market_data_ws.py  memo.py  oauth.py  public.py  setup.py  threads.py  users.py  workspace_files.py
src/server/dependencies/: usage_limits.py
src/server/handlers/: streaming_handler.py
src/server/handlers/chat/: llm_config.py  model_availability.py  ptc_workflow.py
src/server/models/: user.py
src/server/services/: automation_executor.py  insight_service.py  llm_service.py  memo_binary_storage.py  robinhood_oauth.py  workspace_manager.py
src/server/services/persistence/: conversation.py  usage.py
src/tools/brokerage/: __init__.py
src/tools/brokerage/robinhood/: __init__.py  client.py  tools.py
src/utils/storage/: __init__.py  s3_compatible.py
tests/unit/: test_llm_constructor_boundary.py
tests/unit/observability/: conftest.py  test_chat_turn_observed.py  test_instrumentation.py  test_otel_init.py  test_streaming_context.py  test_subagent_context.py
tests/unit/ptc_agent/agent/: test_subagent_compiler.py
tests/unit/ptc_agent/agent/middleware/compaction/: test_resolve_compaction_client.py
tests/unit/ptc_agent/config/: test_client_for_role.py
tests/unit/server/app/: test_threads_credit_gate.py  test_users.py
tests/unit/server/dependencies/: test_usage_limits.py
tests/unit/server/handlers/: test_byok_resolution.py  test_chat_common.py  test_resolve_llm_config.py
tests/unit/server/handlers/chat/: test_byok_candidate_walk.py  test_custom_provider_sdk_inheritance.py  test_resolve_llm_config_credential.py  test_resolve_model_client.py
tests/unit/server/services/: test_automation_executor_credit.py  test_insight_service.py  test_llm_service.py
tests/unit/utils/storage/: test_s3_compatible.py
web/: CLAUDE.md
web/src/: App.tsx  i18n.ts  vite-env.d.ts
web/src/__tests__/: i18n.test.ts
web/src/components/Main/: Main.tsx
web/src/components/Sidebar/: AccountMenu.tsx  Sidebar.css  Sidebar.tsx
web/src/contexts/: AuthContext.tsx
web/src/hooks/: useSyncUserLocale.ts
web/src/hooks/__tests__/: useSyncUserLocale.test.ts
web/src/lib/: locale.ts  oauthPopup.ts  supabase.ts
web/src/locales/: en-US.json  zh-CN.json
web/src/pages/Dashboard/components/: DashboardHeader.tsx
web/src/pages/OAuth/: RobinhoodCallback.tsx
web/src/pages/Settings/: BrokerageTab.tsx  Settings.tsx
web/src/types/: api.ts
