[project]
name = "langalpha-cli"
version = "0.1.0"
description = "PTC Agent CLI - Interactive command-line interface for the PTC Agent"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv",
    "pyperclip>=1.8.0",
    "darkdetect>=0.8.0",
    "pyyaml>=6.0.0",
    "structlog>=24.0.0",
    "langalpha-core",  # For todo types and validation
]

[project.scripts]
ptc-agent = "ptc_cli:run_cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
ptc_cli = ["default_agent_prompt.md"]

[tool.ruff]
line-length = 150
exclude = []

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Messes with the formatter
    "ISC001",  # Messes with the formatter
    "PERF203", # Rarely useful
    "SLF001",  # Private member access
    "PLC0415", # Imports should be at the top. Not always desirable
    "PLR0913", # Too many arguments in function definition
    "PLC0414", # Inconsistent with how type checkers expect re-exports
    "C901",    # Too complex
    "PLR0912", # Too many branches - complexity refactoring not desired
    "PLR0915", # Too many statements - complexity refactoring not desired
    # Pydantic compatibility (from langchain)
    "TC001",   # Move import into TYPE_CHECKING block
    "TC002",   # Move third-party import into TYPE_CHECKING block
    "TC003",   # Move stdlib import into TYPE_CHECKING block
    "RUF012",  # Mutable class default (Pydantic uses these)
]
unfixable = ["B028"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"ptc_cli/*.py" = [
    "T201",    # Allow print statements in CLI
]
"tests/**" = [
    "D1",      # Skip documentation rules in tests
    "S101",    # Allow asserts in tests
    "S108",    # Allow /tmp usage in tests (sandbox paths)
    "S311",    # Allow pseudo-random generators in tests
    "ANN",     # Skip all annotation rules in tests
    "ARG",     # Unused arguments (common in fixtures/mocks)
    "F841",    # Unused variables (common in context managers)
    "RUF059",  # Unused unpacked variables
    "INP001",  # Implicit namespace package
    "PLR2004", # Magic value comparisons
    "DTZ005",  # datetime.now() without tz (ok in tests)
    "SIM117",  # Nested with statements (clearer in tests)
]

[tool.mypy]
strict = true
ignore_missing_imports = true
enable_error_code = ["deprecated"]
disable_error_code = ["import-untyped"]
disallow_any_generics = false
warn_return_any = false
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ptc_cli"]
branch = true
omit = ["tests/*", "*/__init__.py"]

